Revert "Pull Request"

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,11 +1,3 @@
-$border-color: #b6c1db;
-
-$bg-color: #d5d6da;
-
-body {
-    background-color: $bg-color;
-}
-
-.border-primary {
-    color: $border-color !important;
+.bg-color {
+    color: lightslategray;
 }
