--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -1,11 +1,1 @@
-.bg-light {
-  color: #dad6d6;
-}
-
-body {
-  background-color: #d5d6da;
-}
-
-.border-primary {
-  color: #b6c1db !important;
-}/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=styles.css.map */
